c4prj1_deck/grade.txt
Grading at Tue Nov 24 07:55:19 UTC 2020
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:257:11: error: ‘j’ undeclared (first use in this function)
       for(j=i;j<hand->n_cards;j++)
           ^
eval.c:257:11: note: each undeclared identifier is reported only once for each function it appears in
eval.c:265:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of eval.c failed

Overall Grade: F
